--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </nav>
 <section class="infos">
   <div class="gauche">
-    <div>
+    <div> 
        <h1 class="titre">People-Powered Networks</h1>
       <h2 class="stitre">Start a Wireless Revolution</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aliquid pariatur quae placeat veniam ratione repellendus obcaecati atque quibusdam non
@@ -46,6 +46,7 @@
   </div>
 
 </section>
+<script src="script.js"></script>
         
            
   </body>
